[package]
name = "flowdown"
version = "0.1.0"
edition = "2021"
authors = ["MrPicklePinosaur"]
description = "lightweight markup language for conversation design"
repository = "https://github.com/MrPicklePinosaur/flowdown"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
pest = { version = "2" }
pest_derive = { version = "2" }
rand = { version  = "0.8.5" }
log = { version = "0.4.17" }
env_logger = { version = "0.9.0" }
thiserror = { version = "1" }
argparse = { git = "https://github.com/MrPicklePinosaur/pino.rs" }
